# pyastar-sekrit-workshop

./: .gitignore  README.md  pyproject.toml
examples/: reasoning.py  reasoning_cacheable.py  reasoning_classy.py  reasoning_interruptable.py
goapystar/: __init__.py  constants.py  maputils.py  measures.py  types.py
goapystar/actiongraph/: utils.py
goapystar/impls/: cacheable.py  common.py  goap.py  interruptable.py  oop.py  recursive.py  simple.py  trampolined.py  trampolined_abstracted.py  trampolined_abstractedmore.py
goapystar/map_2d/: consts.py  utils.py
goapystar/reasoning/: reasoning.py  reasoning_cacheable.py  reasoning_classy.py  utils.py
goapystar/usecases/: actions.py
maps/: __init__.py  complex_nodebug.json  complex_nodebug_ezwash.json  complex_nodebug_workhard.json  complex_sleepless.json  complex_sleepless_workhard.json  debug_only.json  fed_only.json
pyastar/: mapconsts.py  maputils.py  measures.py  types.py
pyastar/impls/: goap.py  goap_cachable.py  recursive.py  simple.py  trampolined.py  trampolined_abstracted.py  trampolined_abstractedmore.py
pyastar/reasoning/: reasoning.py  reasoning_cacheable.py  reasoning_classy.py  reasoning_v2.py  reasoning_v3.py  reasoning_v4.py  utils.py
src/goapystar/: constants.py  default_impl.py  maputils.py  measures.py  state.py  types.py
src/maps/: __init__.py  custom_binop_test1.json  mapV3.json
tests/: maputils.py  measures.py  test_maputils.py  test_measures.py
tests/examples/: test_cacheable_quick.py  test_classy_quick.py  test_doc_example.py  test_quick.py  test_slow.py
(+33 files in other folders)
