[tool.poetry]
name = "GoapyStar"
version = "0.1.0"
description = "GOAP AI for Python - lightweight, powerful and flexible."
authors = ["Jan Malek <jan.malek@gmail.com>"]
keywords = ["AI", "A*", "Astar", "Pathfinding", "Planning"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
