[project]
name = "goapystar"
version = "0.1.0"
description = "GOAP AI for Python."
readme = "README.md"
authors = [
    { name = "Jan Malek", email = "jan.malek@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "pytest>=8.3.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.poetry]
name = "GoapyStar"
version = "0.1.0"
description = "GOAP AI for Python."
authors = ["Jan Malek <jan.malek@gmail.com>"]
keywords = ["AI", "A*", "Astar", "Pathfinding", "Planning"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
